--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-body{
-    
-}
 #name{
     color: rgb(226, 36, 141);
     font-size: 40px;
@@ -13,12 +10,13 @@ p{
     color: gray;
 }
 section{
-    height: 450px;
+    height: 350px;
     padding-bottom: 250px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 .top{
     background-image: url(images/header-bg.png);
+    background-size: 100%;
     
 }
 .top-div{
@@ -40,9 +38,11 @@ section{
 }
 .middle{
     background-image: url(images/biography-bg.png);
+    background-size: 100%;
 }
 .work{
     background-image: url(images/latest-work-bg.png);
+    background-size: 100%;
     padding: 7%;
 }
 .w{
@@ -59,6 +59,7 @@ section{
 .pop{
     text-align: center;
     background-image: url(images/footer-bg.png);
+    background-size: 100%;
 }
 #last{
     color: black;
